Add confirmation pages for movies deletion

--- a/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Movies to see";
+    ViewData["Title"] = "Movies to See";
 }
 
 @using System.Text
@@ -48,69 +48,70 @@
     @foreach (var movie in Model.Movies)
     {
         var movieInfo = movie.MovieInfo;
-        <li id="movie-@movie.Id.Value" class="movie-info">
-            <img class="movie-info-poster" src="@GetSafePosterUri(movieInfo.PosterUri)" alt="Poster for movie &quot;@movieInfo.Title&quot;" />
-            <div class="movie-info-details">
-                <div class="movie-info-table-details-and-actions">
-                    <div class="movie-info-table-details">
-                        <a class="movie-info-title" href="@movieInfo.MovieUri">@movieInfo.Title</a>
-                        <table class="movie-info-table">
-                            <tbody>
-                                <tr>
-                                    <td class="movie-info-table-key">Year</td>
-                                    <td>@movieInfo.Year</td>
-                                </tr>
-                                <tr>
-                                    <td class="movie-info-table-key">Genres</td>
-                                    <td>
-                                        @{
-                                            ProduceCollection(movieInfo.Genres);
-                                        }
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="movie-info-table-key">Director</td>
-                                    <td>
-                                        @{
-                                            ProduceCollection(movieInfo.Directors);
-                                        }
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="movie-info-table-key">Cast</td>
-                                    <td>
-                                        @{
-                                            ProduceCollection(movieInfo.Cast);
-                                        }
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="movie-info-table-key">Rating</td>
-                                    <td>@movieInfo.Rating</td>
-                                </tr>
-                                <tr>
-                                    <td class="movie-info-table-key">Duration</td>
-                                    <td>@movieInfo.Duration</td>
-                                </tr>
-                            </tbody>
-                        </table>
+        <li id="movie-@movie.Id.Value" class="movies-list-item">
+            <div class="movie-info">
+                <img class="movie-info-poster" src="@GetSafePosterUri(movieInfo.PosterUri)" alt="Poster for movie &quot;@movieInfo.Title&quot;" />
+                <div class="movie-info-details">
+                    <div class="movie-info-table-details-and-actions">
+                        <div class="movie-info-table-details">
+                            <a class="movie-info-title" href="@movieInfo.MovieUri">@movieInfo.Title</a>
+                            <table class="movie-info-table">
+                                <tbody>
+                                    <tr>
+                                        <td class="movie-info-table-key">Year</td>
+                                        <td>@movieInfo.Year</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="movie-info-table-key">Genres</td>
+                                        <td>
+                                            @{
+                                                ProduceCollection(movieInfo.Genres);
+                                            }
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="movie-info-table-key">Director</td>
+                                        <td>
+                                            @{
+                                                ProduceCollection(movieInfo.Directors);
+                                            }
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="movie-info-table-key">Cast</td>
+                                        <td>
+                                            @{
+                                                ProduceCollection(movieInfo.Cast);
+                                            }
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="movie-info-table-key">Rating</td>
+                                        <td>@movieInfo.Rating</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="movie-info-table-key">Duration</td>
+                                        <td>@movieInfo.Duration</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="movie-info-actions">
+                            @if (User.IsInRole("CanMarkMoviesAsSeen"))
+                            {
+                                <div>
+                                    <a asp-action="MarkMovieAsSeen" asp-route-id="@movie.Id.Value">Mark as seen</a>
+                                </div>
+                            }
+                            @if (User.IsInRole("CanDeleteMoviesToSee"))
+                            {
+                                <div>
+                                    <a asp-action="ConfirmMovieDeletion" asp-route-id="@movie.Id.Value">Delete</a>
+                                </div>
+                            }
+                        </div>
                     </div>
-                    <div class="movie-info-actions">
-                        @if (User.IsInRole("CanMarkMoviesAsSeen"))
-                        {
-                            <div>
-                                <a asp-action="MarkMovieAsSeen" asp-route-id="@movie.Id.Value">Mark as seen</a>
-                            </div>
-                        }
-                        @if (User.IsInRole("CanDeleteMoviesToSee"))
-                        {
-                            <div>
-                                <a asp-action="DeleteMovie" asp-route-id="@movie.Id.Value">Delete</a>
-                            </div>
-                        }
-                    </div>
-                </div>
-                @if (!String.IsNullOrEmpty(movieInfo.Summary))
+                    @if (!String.IsNullOrEmpty(movieInfo.Summary))
                 {
                     <div class="movie-info-summary">
                         <a class="collapsed" data-toggle="collapse" href="#collapseSummary-@movie.Id.Value">
@@ -127,6 +128,7 @@
                         </div>
                     </div>
                 }
+                </div>
             </div>
         </li>
     }
