--- a/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
@@ -2,34 +2,7 @@
     ViewData["Title"] = "Movies to See";
 }
 
-@using System.Text
 @model MoviesToSeeViewModel
-
-@{
-    void ProduceCollection(IEnumerable<string> source)
-    {
-        var outputBuilder = new StringBuilder();
-
-        var list = source.ToList();
-        for (var i = 0; i < list.Count; ++i)
-        {
-            <span>@list[i]</span>
-
-            if (i + 1 < list.Count)
-            {
-                @:,
-            }
-        }
-    }
-}
-
-@functions
-{
-    private string GetSafePosterUri(Uri sourceUri)
-    {
-        return sourceUri?.OriginalString ?? Url.Content("~/img/no-poster.jpg");
-    }
-}
 
 @if (User.IsInRole("MoviesToSeeAdder"))
 {
@@ -47,86 +20,21 @@
 <ul class="movies-list">
     @foreach (var movie in Model.Movies)
     {
-        var movieInfo = movie.MovieInfo;
         <li id="movie-@movie.Id.Value" class="movies-list-item">
-            <div class="movie-info">
-                <img class="movie-info-poster" src="@GetSafePosterUri(movieInfo.PosterUri)" alt="Poster for movie &quot;@movieInfo.Title&quot;" />
-                <div class="movie-info-details">
-                    <div class="movie-info-table-details-and-actions">
-                        <div class="movie-info-table-details">
-                            <a class="movie-info-title" href="@movieInfo.MovieUri">@movieInfo.Title</a>
-                            <table class="movie-info-table">
-                                <tbody>
-                                    <tr>
-                                        <td class="movie-info-table-key">Year</td>
-                                        <td>@movieInfo.Year</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="movie-info-table-key">Genres</td>
-                                        <td>
-                                            @{
-                                                ProduceCollection(movieInfo.Genres);
-                                            }
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="movie-info-table-key">Director</td>
-                                        <td>
-                                            @{
-                                                ProduceCollection(movieInfo.Directors);
-                                            }
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="movie-info-table-key">Cast</td>
-                                        <td>
-                                            @{
-                                                ProduceCollection(movieInfo.Cast);
-                                            }
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="movie-info-table-key">Rating</td>
-                                        <td>@movieInfo.Rating</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="movie-info-table-key">Duration</td>
-                                        <td>@movieInfo.Duration</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <div class="movie-info-actions">
-                            @if (User.IsInRole("CanMarkMoviesAsSeen"))
-                            {
-                                <div>
-                                    <a asp-action="ConfirmMarkingAsSeen" asp-route-id="@movie.Id.Value">Mark as seen</a>
-                                </div>
-                            }
-                            @if (User.IsInRole("CanDeleteMoviesToSee"))
-                            {
-                                <div>
-                                    <a asp-action="ConfirmMovieDeletion" asp-route-id="@movie.Id.Value">Delete</a>
-                                </div>
-                            }
-                        </div>
-                    </div>
-                    @if (!String.IsNullOrEmpty(movieInfo.Summary))
+            <div class="movie-info-and-actions">
+                @await Html.PartialAsync("_MovieInfoPartial", movie.MovieInfo)
+                <div class="movie-actions">
+                    @if (User.IsInRole("CanMarkMoviesAsSeen"))
                     {
-                        <div class="movie-info-summary">
-                            <a class="collapsed" data-toggle="collapse" href="#collapseSummary-@movie.Id.Value">
-                                <span class="if-collapsed">Show summary</span>
-                                <span class="if-not-collapsed">Hide summary</span>
-                            </a>
-                            <div id="collapseSummary-@movie.Id.Value" class="collapse">
-                                @foreach (var paragraph in movieInfo.Summary.Split("\n\n"))
-                                {
-                                    <p>
-                                        @paragraph
-                                    </p>
-                                }
-                            </div>
-                        </div>
+                    <div>
+                        <a asp-action="ConfirmMarkingAsSeen" asp-route-id="@movie.Id.Value">Mark as seen</a>
+                    </div>
+                    }
+                    @if (User.IsInRole("CanDeleteMoviesToSee"))
+                    {
+                    <div>
+                        <a asp-action="ConfirmMovieDeletion" asp-route-id="@movie.Id.Value">Delete</a>
+                    </div>
                     }
                 </div>
             </div>
