--- a/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
@@ -4,6 +4,27 @@
 
 @model MoviesToSeeViewModel
 
+@if (Model.AddedMovie)
+{
+    <div class="alert alert-success" role="alert">
+        The movie was added successfully.
+    </div>
+}
+
+@if (Model.MarkedMovieAsSeen)
+{
+    <div class="alert alert-success" role="alert">
+        The movie was marked as seen.
+    </div>
+}
+
+@if (Model.DeletedMovie)
+{
+    <div class="alert alert-success" role="alert">
+        The movie was deleted successfully.
+    </div>
+}
+
 @if (User.IsInRole("MoviesToSeeAdder"))
 {
     <form method="post" asp-action="AddMovie">
