Add form for deleting users

--- a/src/MovieLibrary/Views/Users/Index.cshtml
+++ b/src/MovieLibrary/Views/Users/Index.cshtml
@@ -18,6 +18,9 @@
                             <div class="col">
                                 <a asp-action="Edit" asp-route-id="@user.Id">Edit</a>
                             </div>
+                            <div class="col">
+                                <a asp-action="ConfirmUserDeletion" asp-route-id="@user.Id">Delete</a>
+                            </div>
                         </div>
                     </div>
                 </div>
