--- a/src/MovieLibrary/Views/Users/Edit.cshtml
+++ b/src/MovieLibrary/Views/Users/Edit.cshtml
@@ -29,5 +29,5 @@
     <input type="hidden" asp-for="UserId"/>
 
     <button class="btn btn-primary" type="submit">Update</button>
-    <button class="btn btn-primary" type="submit" asp-action="CancelUserUpdate">Cancel</button>
+    <a class="btn btn-primary" asp-action="Index">Cancel</a>
 </form>
