--- a/src/MovieLibrary/Views/MoviesToGet/ConfirmMovieDeletion.cshtml
+++ b/src/MovieLibrary/Views/MoviesToGet/ConfirmMovieDeletion.cshtml
@@ -15,5 +15,5 @@
 <form method="post" asp-action="DeleteMovie">
     <input type="hidden" id="id" name="id" value="@Model.Id.Value" />
     <button class="btn btn-primary" type="submit">Delete</button>
-    <button class="btn btn-primary" type="submit" asp-action="CancelMovieDeletion">Cancel</button>
+    <a class="btn btn-primary" asp-action="Index">Cancel</a>
 </form>
