--- a/src/MovieLibrary/Views/Users/Index.cshtml
+++ b/src/MovieLibrary/Views/Users/Index.cshtml
@@ -4,6 +4,20 @@
 
 @model MovieLibrary.UserManagement.ViewModels.UserListViewModel;
 
+@if (Model.UpdatedUser)
+{
+    <div class="alert alert-success" role="alert">
+        The user was updated successfully.
+    </div>
+}
+
+@if (Model.DeletedUser)
+{
+    <div class="alert alert-success" role="alert">
+        The user was deleted successfully.
+    </div>
+}
+
 <ul class="list-group">
     @foreach (var user in Model.Users)
     {
