--- a/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Movies to See";
 }
 
+@using MovieLibrary.Internal
 @model MoviesToSeeViewModel
 
 @if (Model.AddedMovie)
@@ -25,7 +26,7 @@
     </div>
 }
 
-@if (User.IsInRole("MoviesToSeeAdder"))
+@if (User.IsInRole(Roles.CanAddMoviesToSee))
 {
     <form method="post" asp-action="AddMovie">
         <div asp-validation-summary="All"></div>
@@ -38,27 +39,30 @@
     </form>
 }
 
-<ul class="movies-list">
-    @foreach (var movie in Model.Movies)
-    {
-        <li id="movie-@movie.Id.Value" class="movies-list-item">
-            <div class="movie-info-and-actions">
-                @await Html.PartialAsync("_MovieInfoPartial", movie.MovieInfo)
-                <div class="movie-actions">
-                    @if (User.IsInRole("CanMarkMoviesAsSeen"))
-                    {
-                    <div>
-                        <a asp-action="ConfirmMarkingAsSeen" asp-route-id="@movie.Id.Value">Mark as seen</a>
+@if (User.IsInRole(Roles.CanReadMoviesToSee))
+{
+    <ul class="movies-list">
+        @foreach (var movie in Model.Movies)
+        {
+            <li id="movie-@movie.Id.Value" class="movies-list-item">
+                <div class="movie-info-and-actions">
+                    @await Html.PartialAsync("_MovieInfoPartial", movie.MovieInfo)
+                    <div class="movie-actions">
+                        @if (User.IsInRole(Roles.CanMarkMoviesAsSeen))
+                        {
+                            <div>
+                                <a asp-action="ConfirmMarkingAsSeen" asp-route-id="@movie.Id.Value">Mark as seen</a>
+                            </div>
+                        }
+                        @if (User.IsInRole(Roles.CanDeleteMoviesToSee))
+                        {
+                            <div>
+                                <a asp-action="ConfirmMovieDeletion" asp-route-id="@movie.Id.Value">Delete</a>
+                            </div>
+                        }
                     </div>
-                    }
-                    @if (User.IsInRole("CanDeleteMoviesToSee"))
-                    {
-                    <div>
-                        <a asp-action="ConfirmMovieDeletion" asp-route-id="@movie.Id.Value">Delete</a>
-                    </div>
-                    }
                 </div>
-            </div>
-        </li>
-    }
-</ul>
+            </li>
+        }
+    </ul>
+}
