Fix navigation title for users manager

--- a/src/MovieLibrary/Views/Shared/_Layout.cshtml
+++ b/src/MovieLibrary/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
 
                             if (User.IsInRole(Roles.Administrator))
                             {
-                                await ProduceNavItem("Users", "Index", "Manager Users");
+                                await ProduceNavItem("Users", "Index", "Manage Users");
                             }
                         }
                     </ul>
