--- a/src/MovieLibrary/Views/MoviesToSee/ConfirmMarkingAsSeen.cshtml
+++ b/src/MovieLibrary/Views/MoviesToSee/ConfirmMarkingAsSeen.cshtml
@@ -15,5 +15,5 @@
 <form method="post" asp-action="MarkMovieAsSeen">
     <input type="hidden" id="id" name="id" value="@Model.Id.Value" />
     <button class="btn btn-primary" type="submit">Mark as seen</button>
-    <a class="btn btn-primary" asp-action="Index">Cancel</a>
+    <a class="btn btn-secondary" asp-action="Index">Cancel</a>
 </form>
