--- a/src/MovieLibrary/Views/Users/ConfirmUserDeletion.cshtml
+++ b/src/MovieLibrary/Views/Users/ConfirmUserDeletion.cshtml
@@ -10,6 +10,6 @@
 
 <form method="post" asp-action="DeleteUser">
     <input type="hidden" id="id" name="id" value="@Model.UserId" />
-    <button class="btn btn-primary" type="submit">Delete</button>
-    <a class="btn btn-primary" asp-action="Index">Cancel</a>
+    <button class="btn btn-danger" type="submit">Delete</button>
+    <a class="btn btn-secondary" asp-action="Index">Cancel</a>
 </form>
