--- a/src/MovieLibrary/Views/Users/RegisterUser.cshtml
+++ b/src/MovieLibrary/Views/Users/RegisterUser.cshtml
@@ -23,6 +23,6 @@
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
         <button class="btn btn-primary" type="submit">Register</button>
-        <a class="btn btn-primary" asp-action="Index">Cancel</a>
+        <a class="btn btn-secondary" asp-action="Index">Cancel</a>
     </form>
 </div>
