--- a/src/MovieLibrary/wwwroot/css/site.css
+++ b/src/MovieLibrary/wwwroot/css/site.css
@@ -70,6 +70,11 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
+.input-validation-error {
+  border-color: red;
+  background-color: #ffeeee;
+}
+
 .nav-link.active {
   background-color: #c8c8c8;
   border-radius: .25rem;
