--- a/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
@@ -28,10 +28,11 @@
 
 @if (User.IsInRole(Roles.CanAddMoviesToSee))
 {
-    <form method="post" asp-action="AddMovie">
+    <form class="mb-3" method="post" asp-action="AddMovie">
         <div asp-validation-summary="All"></div>
         <div class="input-group">
             <div class="input-group-append">
+                <input type="hidden" asp-for="Paging.CurrentPageNumber" />
                 <input class="form-control" asp-for="NewMovieToSee.MovieUri" placeholder="Movie URL" aria-label="Movie URL" size="40" />
                 <button class="btn btn-primary" type="submit">Add</button>
             </div>
@@ -41,6 +42,8 @@
 
 @if (User.IsInRole(Roles.CanReadMoviesToSee))
 {
+    @await Html.PartialAsync("_PagingPartial", Model.Paging)
+
     <ul class="movies-list">
         @foreach (var movie in Model.Movies)
         {
@@ -65,4 +68,6 @@
             </li>
         }
     </ul>
+
+    @await Html.PartialAsync("_PagingPartial", Model.Paging)
 }
