Hide paging bar if only one page presents
There are different opinions whether the paging bar should be shown if only only page presents
(https://ux.stackexchange.com/questions/28401/should-the-pagination-widget-be-shown-when-there-is-only-1-page).

Seems like for current application it's better to hide bar in this case.
Usually the number of movies on the page is small and in most cases there will be just one page.

--- a/src/MovieLibrary/Views/Shared/_PagingPartial.cshtml
+++ b/src/MovieLibrary/Views/Shared/_PagingPartial.cshtml
@@ -2,41 +2,44 @@
 @using MovieLibrary.Internal
 @model PagingViewModel
 
-<nav aria-label="Movies pages">
-    <ul class="pagination justify-content-center">
-        @* Prev page *@
-        @if (Model.CurrentPageNumber > 1)
-        {
-            await ProducePageButtonWithCaption(Model.CurrentPageNumber - 1, "Prev");
-        }
-        else
-        {
-            await ProduceDisabledPageButton("Prev");
-        }
-
-        @foreach (var buttonPageNumber in PagingButtonsSelector.SelectButtonsPages(Model.CurrentPageNumber, Model.TotalPagesNumber))
-        {
-            if (buttonPageNumber == 0)
+@if (Model.TotalPagesNumber > 1)
+{
+    <nav aria-label="Movies pages">
+        <ul class="pagination justify-content-center">
+            @* Prev page *@
+            @if (Model.CurrentPageNumber > 1)
             {
-                await ProduceDisabledPageButton("...");
+                await ProducePageButtonWithCaption(Model.CurrentPageNumber - 1, "Prev");
             }
             else
             {
-                await ProducePageButton(buttonPageNumber, Model.CurrentPageNumber);
+                await ProduceDisabledPageButton("Prev");
             }
-        }
 
-        @* Next page *@
-        @if (Model.CurrentPageNumber < Model.TotalPagesNumber)
-        {
-            await ProducePageButtonWithCaption(Model.CurrentPageNumber + 1, "Next");
-        }
-        else
-        {
-            await ProduceDisabledPageButton("Next");
-        }
-    </ul>
-</nav>
+            @foreach (var buttonPageNumber in PagingButtonsSelector.SelectButtonsPages(Model.CurrentPageNumber, Model.TotalPagesNumber))
+            {
+                if (buttonPageNumber == 0)
+                {
+                    await ProduceDisabledPageButton("...");
+                }
+                else
+                {
+                    await ProducePageButton(buttonPageNumber, Model.CurrentPageNumber);
+                }
+            }
+
+            @* Next page *@
+            @if (Model.CurrentPageNumber < Model.TotalPagesNumber)
+            {
+                await ProducePageButtonWithCaption(Model.CurrentPageNumber + 1, "Next");
+            }
+            else
+            {
+                await ProduceDisabledPageButton("Next");
+            }
+        </ul>
+    </nav>
+}
 
 @{
     async Task ProduceDisabledPageButton(string caption)
