Remove top paging bar
Usually it's recommended to display paging bar at the top and at the bottom of the page.
However we remove top paging bar. It overloads top part of the page (navigation pane, add movie form, paging bar).
Another reason is that in most cases the user will not randomly jump between the pages.
We expect that the user will thoughtfully study the content, page by page.

--- a/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
@@ -28,7 +28,7 @@
 
 @if (User.IsInRole(Roles.CanAddMoviesToSee))
 {
-    <form class="mb-3" method="post" asp-action="AddMovie">
+    <form method="post" asp-action="AddMovie">
         <div asp-validation-summary="All"></div>
         <div class="input-group">
             <div class="input-group-append">
@@ -42,8 +42,6 @@
 
 @if (User.IsInRole(Roles.CanReadMoviesToSee))
 {
-    @await Html.PartialAsync("_PagingPartial", Model.Paging)
-
     <ul class="movies-list">
         @foreach (var movie in Model.Movies)
         {
