Add confirmation page for adding of new movies
This commit also removes jump to just added movie and fade-in effect.
Such jump was used previously, so that user can examine the info parsed for just added movie.
Now the user examines the parsing on the confirmation page. And it's not trivial to implement the jump after paging was introduced.

--- a/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
@@ -28,7 +28,7 @@
 
 @if (User.IsInRole(Roles.CanAddMoviesToGet))
 {
-    <form method="post" asp-action="AddMovie">
+    <form method="post" asp-action="ConfirmMovieAdding">
         <div asp-validation-summary="All"></div>
         <div class="input-group">
             <div class="input-group-append">
