--- a/src/MovieLibrary/Views/MoviesToGet/ConfirmMovieAdding.cshtml
+++ b/src/MovieLibrary/Views/MoviesToGet/ConfirmMovieAdding.cshtml
@@ -9,7 +9,7 @@
 </div>
 
 <div class="single-movie-item">
-    @await Html.PartialAsync("_MovieInfoPartial", Model.SourceMovieInfo)
+    @await Html.PartialAsync("_MovieInfoPartial", (Model.SourceMovieInfo, "new-movie"))
 </div>
 
 <form method="post" asp-action="AddMovie">
