--- a/src/MovieLibrary/Views/MoviesToGet/ConfirmMovingToSee.cshtml
+++ b/src/MovieLibrary/Views/MoviesToGet/ConfirmMovingToSee.cshtml
@@ -9,7 +9,7 @@
 </div>
 
 <div class="single-movie-item">
-    @await Html.PartialAsync("_MovieInfoPartial", Model.MovieInfo)
+    @await Html.PartialAsync("_MovieInfoPartial", (Model.MovieInfo, Model.Id.Value))
 </div>
 
 <form method="post" asp-action="MoveToMoviesToSee">
