Add snapshot tests for UsersController

--- a/src/MovieLibrary/Views/Users/Index.cshtml
+++ b/src/MovieLibrary/Views/Users/Index.cshtml
@@ -37,7 +37,7 @@
                     <div class="col-auto container">
                         <div class="row">
                             <div class="col">
-                                <a asp-action="Edit" asp-route-id="@user.Id">Edit</a>
+                                <a asp-action="EditUser" asp-route-id="@user.Id">Edit</a>
                             </div>
                             <div class="col">
                                 <a asp-action="ConfirmUserDeletion" asp-route-id="@user.Id">Delete</a>
