--- a/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Movies to See";
 }
 
-@using MovieLibrary.Internal
+@using MovieLibrary.Authorization
+@using MovieLibrary.Extensions
 @model MoviesToSeeViewModel
 
 @if (Model.AddedMovie)
@@ -26,7 +27,7 @@
     </div>
 }
 
-@if (User.IsInRole(Roles.CanAddMoviesToSee))
+@if (User.HasPermission(ApplicationPermissions.MoviesToSee.Add))
 {
     <form method="post" asp-action="ConfirmMovieAdding">
         <div asp-validation-summary="All"></div>
@@ -40,7 +41,7 @@
     </form>
 }
 
-@if (User.IsInRole(Roles.CanReadMoviesToSee))
+@if (User.HasPermission(ApplicationPermissions.MoviesToSee.Read))
 {
     <ul class="movies-list">
         @foreach (var movie in Model.Movies)
@@ -49,13 +50,13 @@
                 <div class="movie-info-and-actions">
                     @await Html.PartialAsync("_MovieInfoPartial", (movie.MovieInfo, movie.Id.Value))
                     <div class="movie-actions">
-                        @if (User.IsInRole(Roles.CanMarkMoviesAsSeen))
+                        @if (User.HasPermission(ApplicationPermissions.MoviesToSee.MarkAsSeen))
                         {
                             <div>
                                 <a asp-action="ConfirmMarkingAsSeen" asp-route-id="@movie.Id.Value">Mark as seen</a>
                             </div>
                         }
-                        @if (User.IsInRole(Roles.CanDeleteMoviesToSee))
+                        @if (User.HasPermission(ApplicationPermissions.MoviesToSee.Delete))
                         {
                             <div>
                                 <a asp-action="ConfirmMovieDeletion" asp-route-id="@movie.Id.Value">Delete</a>
