--- a/src/MovieLibrary/Views/Users/EditUser.cshtml
+++ b/src/MovieLibrary/Views/Users/EditUser.cshtml
@@ -13,16 +13,7 @@
         </tr>
         </thead>
         <tbody>
-        @for (var i = 0; i < Model.Permissions.Count; ++i)
-        {
-            <tr>
-                <td>@Model.Permissions[i].PermissionName</td>
-                <td class="text-center">
-                    <input type="checkbox" asp-for="Permissions[i].Assigned"/>
-                    <input type="hidden" asp-for="Permissions[i].PermissionName"/>
-                </td>
-            </tr>
-        }
+        @* TBD: Add permissions checkboxes *@
         </tbody>
     </table>
 
